<resources>
    <string name="app_name">moRotie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_menu_tv1">The dangers of eating moldy bread are obvious, as it increases the risk of food poisoning and other infections.</string>
    <string name="main_menu_tv2">scan ur bread below</string>
    <string name="resultUpload">Result :</string>
    <string name="about_us_tv">About Us</string>
    <string name="article_tv">Trivia</string>
    <string name="morotie">moRotie</string>
    <string name="login">Login</string>
    <string name="let_s_check_our_interesting_facts">Check Out Our Interesting Facts!</string>
    <string name="about_us">About Us</string>
    <string name="realtimescan">Scan Now</string>
    <string name="upload">Upload</string>
    <string name="home">Home</string>
    <string name="gejala_keracunan">Gejala Keracunan :</string>
    <string name="lormipsumsum">lormipsumsum</string>
    <string name="loremipsum">loremipsum</string>
    <string name="pengobatan">Pengobatan :</string>
    <string name="camera">Camera</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="galery">Galery</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>


</resources>