<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailArticleFragment"
    android:id="@+id/articledetailcon">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">



        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/imageviewholder"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/tv_item_name"
            android:text="@string/loremipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="8dp"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_description"
            android:text="@string/loremipsum"
            android:fontFamily="@font/nunito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_item_name_spesies"
            android:text="@string/loremipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            android:textStyle="bold" />






        <TextView
            android:text="@string/gejala_keracunan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_name_gejala"
            android:text="@string/lormipsumsum"
            android:fontFamily="@font/nunito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:text="@string/pengobatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_name_pengobatan"
            android:text="@string/lormipsumsum"
            android:fontFamily="@font/nunito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />


    </LinearLayout>


</FrameLayout>